--- a/app/globals.css
+++ b/app/globals.css
@@ -85,7 +85,7 @@
     }
 
     .section_container {
-        @apply px-6 py-10 max-w-7xl mx-auto;
+        @apply px-6 py-10 max-w-5xl mx-auto;
     }
 
     .card_grid {
@@ -208,7 +208,7 @@
 
     /* view */
     .view-container {
-        @apply flex justify-end items-center mt-5 fixed bottom-3 right-3;
+        @apply flex justify-start items-center mt-5 fixed bottom-3 left-3;
     }
 
     .view-text {
